--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,14 @@
 ####### Data-Source Properties #######
-spring.datasource.url=jdbc:postgresql://localhost:5432/bcaf_dev
-spring.datasource.username=postgres
+spring.datasource.url=jdbc:mysql://localhost:3306/bcaf_dev
+spring.datasource.username=root
 spring.datasource.password=p@ssw0rd
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
 
 ###### JPA Properties ######
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.hbm2ddl.auto=validate
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
